# scan-pypi

./: .dockerignore  .env  .env.example  .gitignore  ASYNCIO_SOLUTION.md  CACHE_SYSTEM_GUIDE.md  Dockerfile  MIGRATION_UV.md  README.md  STRICT_TYPING_SOLUTION.md  api.py  build.py  business_rules.py  cache_manager.py  config.py  consolidated.xlsx  consolidated_report.json  debug_approval_engine.py  debug_deps_structure.py  debug_dto_conversion.py  debug_rechazadas.py  debug_transitivas.py  debug_transitivas_trace.py  dependency_utils.py  entry_point.py  main.py  models.py  mypy.ini  package_utils.py  packages.xlsx  performance_test.py  pipgrip_resolver.py  pypi-scanner.spec  pypi_info.py  pypi_result.json  pypi_scanner.spec  pypi_siple_api.py  pyproject.toml  pyscan.spec  report_utils.py  (+34 more)
.github/: copilot-instructions.md
.venv311/: pyvenv.cfg
docs/: ANALYSIS_VERIFICATION_STATUS.md  APPROVAL_LOGIC_IMPROVEMENTS.md  CLEAR_REASONS_SOLUTION.md  COMPARISON_YOUR_SCREENSHOT.md  FINAL_ANSWER_LICENSE.md  FINAL_RESOLUTION.md  FINAL_SOLUTION_VISUAL.md  GITHUB_API_AUTHENTICATION.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  INDEX_LICENSE_DOCS.md  LICENSE_EXTRACTION_DETAILED.md  LICENSE_EXTRACTION_EXAMPLE.md  LICENSE_EXTRACTION_FLOW.md  LICENSE_EXTRACTION_MAP.md  LICENSE_VALIDATOR_ENCAPSULATION.md  PROJECT_STATUS.md  QUICK_REFERENCE.md  QUICK_SUMMARY.md  README.md  README_LICENSE_DOCS.md  RETRY_POLICY_IMPLEMENTATION.md  SNYK_ERROR_FIX.md  SNYK_PRINT_DEPS_ANALYSIS.md  SOLUTION_FINAL.md  SPECIFIC_REASONS_SOLUTION.md  TESTING_GUIDE.md  WHY_VERIFICATION_STATUS_EXPLAINED.md  (+1 more)
(+79 files in other folders)
